# url-shortener-rs

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: db.rs  main.rs  server.rs
static/: auth.css  auth.js  index.css  index.html  index.js
views/: auth.html  index.html
