[package]
name = "link_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"]}
# rusqlite = { version = "0.29.0", features = ["bundled"] }
nanoid = "0.4.0"
rocket_sync_db_pools = {version = "0.1.0-rc.3", features = ["sqlite_pool"]}
